<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mostafa.bakingtime.Main2Activity">
    <fragment
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/master_list_fragment"
        android:name="com.example.mostafa.bakingtime.master_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</android.support.constraint.ConstraintLayout>
